--- a/Wood.css
+++ b/Wood.css
@@ -1903,11 +1903,13 @@ input[type='search']
     color: #182029 !important;
     font-weight: initial !important;
 }
-img[alt='Snatched']
+img[alt='Snatches']
 {
-	background: url('./images/light-on-dark/snatched.png') no-repeat scroll 0 0 transparent !important;
-	width: 15px;
-	height: 15px;
+	background: url('./images/light-on-dark/snatched.png') no-repeat scroll 0 0 transparent;
+    background-size:15px;
+    height: 15px;
+    width: 0;
+    padding-right: 15px;
 }
 img[alt='Seeders']
 {
